k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo
spec:
  rules:
  - host: wasm.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wasm-echo
            port:
              number: 80
  - host: container.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: container-echo
            port:
              number: 80
  - host: python.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: container-python
            port:
              number: 80
